--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,13 @@
 set(ASCGRID AscGrid.cpp)
 
+set(predP_S_FILES predictPoint_sfd.cpp sfdRegionSimilarity.cpp ${ASCGRID})
 set(predP_M_FILES predictPoint_mfd.cpp mfdRegionSimilarity.cpp ${ASCGRID})
 
+add_executable(predP_S ${predP_S_FILES})
 add_executable(predP_M ${predP_M_FILES})
 
-set(MY_TARGETS predP_M)
+set(MY_TARGETS predP_S
+               predP_M)
 
 foreach (c_target ${MY_TARGETS})
     target_link_libraries(${c_target} ${MPI_LIBRARIES} ${GDAL_LIBRARY})
